--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-@import '~antd/dist/antd.css';
 .App {
   text-align: center;
 }
@@ -24,6 +23,11 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
 }
