--- a/scripts/template/method.mustache
+++ b/scripts/template/method.mustache
@@ -102,7 +102,7 @@ export function {{&methodName}}(params){
         {{/required}}
 
     {{/parameters}}
-    // queryParameters = mergeQueryParams(parameters, queryParameters);
+    queryParameters = mergeQueryParams(parameters, queryParameters);
 
 
 
