--- a/scripts/template/method.mustache
+++ b/scripts/template/method.mustache
@@ -8,7 +8,7 @@
 {{/parameters}}
  */
 export function {{&methodName}}(params){
-    {{#isES6}}let{{/isES6}}{{^isES6}}var{{/isES6}} urlPath = '/api{{&path}}';
+    {{#isES6}}let{{/isES6}}{{^isES6}}var{{/isES6}} urlPath = baseURL + '/api{{&path}}';
     {{#isES6}}let{{/isES6}}{{^isES6}}var{{/isES6}} body = {}, queryParameters = {}, headers = params.headers || {}, form = {};
 
     {{#isSecure}}
