--- a/scripts/template/react-class.mustache
+++ b/scripts/template/react-class.mustache
@@ -8,6 +8,8 @@ import { has, includes, assign } from "lodash";
 
 const baseURL = process.env.REACT_APP_NETLIFY_API_URL || ""
 
+console.log(baseURL)
+
 function serializeQueryParams(parameters) {
   let str = [];
   for (let p in parameters) {
