--- a/scripts/template/method.mustache
+++ b/scripts/template/method.mustache
@@ -30,6 +30,13 @@ export function {{&methodName}}(params){
         headers["Content-Type"] =  "application/json; charset=utf-8";
     }
 
+    headers['Access-Control-Allow-Credentials']  = true;
+    headers['Access-Control-Allow-Origin'] = true
+
+    if (baseURL != "") {
+        headers["Access-Control-Allow-Origin"] = baseURL
+    }
+
 
     let parameters = params;
 
@@ -111,12 +118,21 @@ export function {{&methodName}}(params){
         ? "?" + serializeQueryParams(queryParameters)
         : "";
 
-    return fetch(urlPath + queryParams,
-     {
+    let options = {
+        credentials: 'include',
+        cache: 'no-cache',
+        mode :'cors'
+    }
+
+    options = assign({
         method: '{{method}}',
         headers,
         body: JSON.stringify(body),
-     }
+     },
+     options 
+    );
+    return fetch(urlPath + queryParams,
+     options
     ).then(response => 
         response.json().then(json =>
             assign(
