--- a/scripts/template/method.mustache
+++ b/scripts/template/method.mustache
@@ -30,8 +30,8 @@ export function {{&methodName}}(params){
         headers["Content-Type"] =  "application/json; charset=utf-8";
     }
 
-    headers['Access-Control-Allow-Credentials']  = true;
-    headers['Access-Control-Allow-Origin'] = true
+    //headers['Access-Control-Allow-Credentials']  = true;
+    //headers['Access-Control-Allow-Origin'] = true
 
     if (baseURL != "") {
         headers["Access-Control-Allow-Origin"] = baseURL
