--- a/src/components/GlobalFooter/GlobalFooter.css
+++ b/src/components/GlobalFooter/GlobalFooter.css
@@ -1,14 +1,17 @@
-@import '~antd/dist/antd.css';
+@import "~antd/dist/antd.css";
+
 .GlobalFooter-block {
   display: inline;
   margin-left: 40px;
   color: white;
+  text-decoration: none;
 }
 
 .GlobalFooter-block-right {
   display: inline;
   margin-right: 40px;
   color: white;
+  text-decoration: none;
 }
 
 .C3SR-logo {
