--- a/src/share/style.css
+++ b/src/share/style.css
@@ -1,51 +1,52 @@
-@import '~antd/dist/antd.css';
+@import "~antd/dist/antd.css";
 
 h1 {
   font-size: 1.5rem;
   line-height: 2rem;
-  font-family: 'Gotham', sans-serif;
+  font-family: "IBM Plex Sans", "Helvetica Neue", Arial, sans-serif;
 }
 
 h2 {
   font-size: 1.125rem;
   line-height: 1.5rem;
-  font-family: 'Gotham', sans-serif;
+  font-family: "IBM Plex Sans", "Helvetica Neue", Arial, sans-serif;
 }
 
 h3 {
   font-size: 0.875rem;
   line-height: 1.25rem;
-  font-family: 'Gotham', sans-serif;
+  font-family: "IBM Plex Sans", "Helvetica Neue", Arial, sans-serif;
 }
 
 h4 {
   font-size: 0.75rem;
   line-height: 1.375rem;
-  font-family: 'Gotham', sans-serif;
+  font-family: "IBM Plex Sans", "Helvetica Neue", Arial, sans-serif;
 }
 
 h5 {
   font-size: 1.5rem;
   line-height: 2rem;
-  font-family: 'IBM Plex Mono', monospace;
+  font-family: "IBM Plex Mono", "Menlo", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", Courier,
+    monospace;
 }
 
 p {
   font-size: 0.875rem;
   line-height: 1.375rem;
-  font-family: 'Gotham', sans-serif;
+  font-family: "IBM Plex Sans", "Helvetica Neue", Arial, sans-serif;
 }
 
 .PrimaryOrange {
-  background: #E84A27;
+  background: #e84a27;
 }
 
 .DarkBlue {
-  background: #1A263A;
+  background: #1a263a;
 }
 
 .LightGray {
-  background: #E8E9EB;
+  background: #e8e9eb;
 }
 
 .CenterBlock {
