--- a/scripts/template/method.mustache
+++ b/scripts/template/method.mustache
@@ -9,7 +9,11 @@
  */
 export function {{&methodName}}(params){
     {{#isES6}}let{{/isES6}}{{^isES6}}var{{/isES6}} urlPath = baseURL + '/api{{&path}}';
-    {{#isES6}}let{{/isES6}}{{^isES6}}var{{/isES6}} body = {}, queryParameters = {}, headers = params.headers || {}, form = {};
+    {{#isES6}}let{{/isES6}}{{^isES6}}var{{/isES6}} body = {}, queryParameters = {}, headers = {}, form = {};
+
+    if (params && params.headers) {
+        headers = params.headers;
+    }
 
     {{#isSecure}}
         headers = this.setAuthHeaders(headers);
@@ -117,10 +121,11 @@ export function {{&methodName}}(params){
         mode :'cors'
     }
 
+    options = assign(parameters, options);
+
     options = assign({
         method: '{{method}}',
         headers,
-        body: JSON.stringify(body),
      },
      options 
     );
