--- a/src/components/LandingPage_1/LandingPage.css
+++ b/src/components/LandingPage_1/LandingPage.css
@@ -118,7 +118,7 @@
 }
 
 .LandingPage-section6 {
-  background-color: #25282f;
+  background-color: #1a263a;
   padding: 0;
   min-height: 610px;
   margin: 0px 0px;
